添加前端面试题

--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -1,4 +1,6 @@
 ---
+
+
 title: 前端面试基础
 date: 2020-01-02 10:43:17
 tags:
@@ -25,7 +27,7 @@ categories:
 
 * offsetWidth=(内容宽度＋内边距＋边框)，无外边距
 
-  ```html
+```html
   div{
   	width:100px;// 即内容宽度
   	padding:10px;
@@ -33,7 +35,7 @@ categories:
   }
   
   //offsetWidth = 122px
-  ```
+```
 
   
 
@@ -41,7 +43,7 @@ categories:
 
   * `box-sizing:border-box;`
 
-    ```html
+```html
     div{
     	width:100px;// 即盒子宽度   此时内容宽度为100-22=78px
     	padding:10px;
@@ -50,9 +52,9 @@ categories:
     }
     
     //offsetWidth = 100px
-    ```
+```
 
-    
+​    
 
 ####  margin 纵向重叠的问题
 
@@ -64,7 +66,7 @@ categories:
 
   * 若中间有空白内容标签，则比较空白标签margin-top、空白标签margin-bottom、上方元素margin-bottom、下方元素margin-top, 哪个值大则为上方元素与下方元素之间的距离
 
-    ```html
+```html
     <!DOCTYPE html>
     <html>
     <head>
@@ -98,7 +100,7 @@ categories:
     //1 div会重叠
     //2 比较div的margin-bottom(5px)、div的margin-top(70px)、<p>AAA</p>的margin-bottom(15px)、<p>hhhhh</p>的margin-top(15px),其中最大的是70px，
     //3 所以<p>AAA</p>与<p>hhhhh</p>之间的margin距离是70px
-    ```
+```
 
 
 
@@ -175,28 +177,24 @@ categories:
       *  `margin-top:-absolute元素自身宽的一半`是利用margin负值使自身上移
   
   * absolute元素: transform(-50%,-50%)
-  
-    * ```
-      position: absolute;
+  	* 次方法兼容性差
+    * 此方法不用计算自身元素的宽高的一半
+```css  position: absolute;
       left: 50%;//右移父元素宽的一半
       top: 50%;//下移父元素高的一半 
       transform: translate(-50%, -50%)//自身左移上移自身的宽高的一半
-      ```
-  
-    * 次方法兼容性差
-  
-    * 此方法不用计算自身元素的宽高的一半
-  
+```
+
   * absolute元素: top, left, bottom,right = 0 + margin: auto
-  
-    * ```
+
+```css
       position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
       right: 0;
       margin: auto;
-      ```
+```
 
 
 
@@ -206,7 +204,7 @@ categories:
 
 * 写具体数值，如30px，则继承该值
 
-  * ```
+```css
       body {
             font-size: 20px;
             line-height: 25px;
@@ -217,13 +215,12 @@ categories:
         }
         //p行高25px
         //此时是p继承了 line-height: 25px; 
-    ```
+```
 
   
 
 * 写比例，如2、1.5，则继承该比例
-
-  * ```
+```css
        body {
             font-size: 20px;
             line-height: 2;
@@ -234,13 +231,13 @@ categories:
         }
         //p行高  16px*2 ,所以行高为32px
         //此时是p继承了 line-height: 2; 然后计算出行高32px
-    ```
+```
 
-    
+​    
 
 * 写百分比，如200%，则继承计算出来的值（考点)
 
-  * ```
+```css
        body {
             font-size: 20px;
             line-height: 200%;//此时body行高40px
@@ -251,7 +248,7 @@ categories:
         }
         //p行高 20px*200% ,所以行高为40px
         //此时是body先计算出 line-height: 40px, 然后p标签继承了line-height: 40px
-    ```
+```
 
 
 
@@ -267,7 +264,7 @@ categories:
 
 * rem ，相对长度单位，相对于根元素，常用于响应式布局
 
-  * ```
+```css
             html {
                 font-size: 100px;
             }
@@ -276,7 +273,7 @@ categories:
                 margin-top: 10px;
                 font-size: 0.16rem;//此时div的字体为0.16*100px=16px
             }
-    ```
+```
 
 ####  响应式布局的常见方案?  
 
@@ -328,14 +325,14 @@ categories:
 
   * 值类型是用栈存储的
 
-  ```js
+```js
   //值类型
   let a = 100
   let b = a
   a=200
   console.log (b)//打印结果为 100
   
-  ```
+```
 
   ![image-20210115183649826](前端面试基础/image-20210115183649826.png)
 
@@ -343,14 +340,14 @@ categories:
 
   * 引用类型是同时用堆栈存储的，实际内容存在堆中，栈中只存储了内存地址，所以两个变量实际是指向同一个内存地址的
 
-  ```js
+```js
   //引用类型
   let a = { age: 20 }
   let b = a
   b.age = 21
   console.log (a.age)//打印结果为 21
   
-  ```
+```
 
   ![image-20210115184047089](前端面试基础/image-20210115184047089.png)
 
@@ -514,12 +511,12 @@ function deepClone(obj = {}) {
 
   * if、while、for的`{ }`块中定义
 
-  ```js
+```js
   if(true){
       let x = 100
   }
   console.log(x)//会报错
-  ```
+```
 
 ![image-20210118143515773](前端面试基础/image-20210118143515773.png)
 
@@ -785,7 +782,7 @@ for ( i = 0; i < 10; i++) {
 
 * setTimeout问题（js任务队列）
 
-  ```js
+```js
   //setTimeout笔试题
   console.log(1)
   setTimeout ( function () {
@@ -799,11 +796,11 @@ for ( i = 0; i < 10; i++) {
   
   //打印结果
   1,3,5,4,2
-  ```
+```
 
 * 手写用Promise加载一张图片
 
-  ```js
+```js
   function loadImg(src) {
       const p = new Promise(
           (resolve, reject) => {
@@ -856,7 +853,7 @@ for ( i = 0; i < 10; i++) {
     console.log(img2.width,img2.height)
   }
   test()
-  ```
+```
 
 * 请描述event loop (事件循环/事件轮询）的机制，可画图
 
@@ -874,7 +871,7 @@ for ( i = 0; i < 10; i++) {
 
 * 场景题- promise then和catch的连接
 
-  ```js
+```js
   // 第一题
   Promise.resolve().then(() => {
       console.log(1)
@@ -903,13 +900,13 @@ for ( i = 0; i < 10; i++) {
   }).catch(() => {
       console.log(3)
   })
-  ```
+```
 
   
 
 * 场景题- async/await语法
 
-  ```js
+```js
   async function fn( ) {
       return 100
   }
@@ -920,9 +917,9 @@ for ( i = 0; i < 10; i++) {
   
   a 为一个Promise对象
   b 为 100
-  ```
+```
 
-  ```js
+```js
   ( async function () {
       console.log( 'start ' )
       const a = await 100
@@ -938,13 +935,13 @@ for ( i = 0; i < 10; i++) {
   start
   a100
   b200
-  ```
+```
 
   
 
 * 场景题- promise和setTimeout的顺序
 
-  ```js
+```js
   console.log ( 100)
   setTimeout(() => {
       console.log ( 200)
@@ -959,13 +956,13 @@ for ( i = 0; i < 10; i++) {
   400
   300
   200
-  ```
+```
 
   
 
 * 场景题–外加async/await的顺序问题
 
-  ```js
+```js
   async function async1 ( ) {
       console.log ( 'async1 start ')  //2
       await async2()                 //注意  此处先执行async2  然后将后面的代码加入微任务队列
@@ -994,7 +991,7 @@ for ( i = 0; i < 10; i++) {
   
   console.log( 'script end ' )  // 5
   
-  ```
+```
 
   
 
@@ -1059,7 +1056,7 @@ for ( i = 0; i < 10; i++) {
 
 * 微任务执行时机比宏任务要早
 
-  ```js
+```js
   console.log(100)
   setTimeout(() => {
       console.log(200)
@@ -1069,7 +1066,7 @@ for ( i = 0; i < 10; i++) {
   })
   console.log(400)
   // 100 400 300 200
-  ```
+```
 
   
 
@@ -1126,7 +1123,7 @@ setTimeout(() => {
 
 * 然后再去触发下一-次 Event Loop
 
-  ```js
+```js
   const $p1 = $('<p>一段文字</p>')
   const $p2 = $('<p>一段文字</p>')
   const $p3 = $('<p>一段文字</p>')
@@ -1147,7 +1144,7 @@ setTimeout(() => {
   setTimeout(function () {
       alert('setTimeout 是在下一次 Call Stack ，就能看到 DOM 渲染出来的结果了')
   })
-  ```
+```
 
 ![image-20210120181228476](前端面试基础/image-20210120181228476.png)
 
@@ -1718,12 +1715,12 @@ CORS
 
   * 以键值对的形式存储
 
-  ```js
+```js
   localstorage.setItem( 'a', 100)
   localstorage.getItem( 'a') //"100"     //注意返回结果都为字符串，会有强制类型转换
   sessionStorage.setItem( 'b', '200')
   sessionStorage.getItem( 'b')//"200"
-  ```
+```
 
   
 
@@ -1734,3 +1731,963 @@ CORS
 * localStorage和sessionStorage区别
   * localStorage 数据会永久存储，除非代码或手动删除 ，（多用此方法）
   * sessionStorage数据只存在于当前会话，浏览器关闭则清空
+
+
+
+
+
+##  HTTP
+
+> [Chuckie's Blog-HTTP](https://chuckiewill.github.io/categories/HTTP/)
+
+* http常见的状态码有哪些?
+* http常见的header有哪些?
+* 什么是 Restful API
+* 描述一下http的缓存机制（重要)
+
+###  http code
+
+* 状态码分类
+  * 1xx服务器收到请求
+  * 2xx请求成功，如200
+  * 3xx重定向，如302（该服务端已不工作，请求其他地址）
+  * 4xx客户端错误，如404（请求的地址错误）
+  * 5xx服务端错误，如500（服务端代码错误）
+
+* 常见状态码
+
+  * 200成功
+  * 301永久重定向（配合location ，重定向的地址存储在location中，浏览器自动处理，下次请求直接请求重定向的地址)
+  * 302临时重定向（配合location，浏览器自动处理，下次请求还是请求原地址，返回302后再去请求新地址，*百度搜索案例*)
+
+  ![image-20210704160320802](前端面试基础/image-20210704160320802.png)
+  * 304资源未被修改（刚才已经请求过了，且内容没有变化，服务端不会再次发送内容，客户端使用之前的内容即可）
+  * 404资源未找到（请求地址错误）
+  * 403没有权限（没有登陆，权限不够）
+  * 500服务器错误（代码错误）
+  * 504网关超时（数据库操作超时，服务端多个服务器之间交互超时）
+
+###  http methods
+
+* 传统methods
+
+  * get获取服务器的数据
+  * post向服务器提交数据
+
+* 现状methods
+
+  * get获取数据
+  * post 新建数据
+  * patch/put更新数据
+  * delete 删除数据
+
+* Restful API
+
+  >  —种新的API设计方法（早已推广使用)
+
+  * 传统API与Restful API的区别
+    * 传统API设计:把每个url当做一个功能
+    * Restful API设计:把每个url当做一个唯一的资源的id(url是资源的唯一标识)
+
+  * Restful API设计的特点
+
+    * 不使用url参数
+
+      * 传统API 设计:`/api/list?pageIndex=2`
+      * Restful API设计:`/api/list/2`
+
+    * 用method表示操作类型
+
+```js
+//传统API 设计
+      post请求/api/create-blog         //创建博客
+      post请求/api/update-blog?id=100  //更新第100页博客
+      get请求/api/get-blog?id=100      //获取第100页博客
+```
+
+
+```js
+//Restful API设计
+      post请求/api/blog         //创建博客
+      patch请求/api/blog/100    //更新第100页博客
+      get请求/api/blog/100      //获取第100页博客
+```
+
+
+###  http headers
+
+* 常见的Request Headers（客户端传给服务端的头信息）
+  * Accept浏览器可接收的数据格式
+  * Accept-Encoding浏览器可接收的压缩算法，如gzip
+  * Accept-Languange浏览器可接收的语言，如zh-CN
+  * Connection: keep-alive  长链接：一次TCP连接重复使用
+  * cookie
+  * Host  请求地址的域名
+  * User-Agent (简称UA)浏览器信息
+  * Content-type发送数据的格式，如application/json
+* 常见的Response Headers（服务端返回客户端的头信息）
+  * Content-type返回数据的格式，如application/json
+  * Content-length返回数据的大小，多少字节
+  * Content-Encoding返回数据的压缩算法，如gzip
+  * Set-cookie
+
+###  http 缓存
+
+* 什么是缓存?（对不需要重复获取的资源存储在本地）
+* 为什么需要缓存?（提升响应速度，减少资源浪费）
+* 哪些资源可以被缓存?—静态资源（ js css img )
+
+####  强制缓存
+
+> Expires已经被Cache-Control代替
+
+* Cache-Control
+
+  * Response Headers中
+  * 控制强制缓存的逻辑
+  * 例如Cache-Control: max-age=3153600（单位是秒)  控制可缓存的最大时长
+  * Cache-Control的值
+    * max-age （控制可缓存的最大时长）
+    * no-store  （不允许强制缓存也不允许协商缓存）
+    * no-cache  （只是不允许强制缓存）
+    * public   （终端用户的设备可缓存，路由过程中也可缓存）
+    * private  （只允许终端用户的设备可缓存）
+
+  ![image-20210704180836881](前端面试基础/image-20210704180836881.png)
+
+![image-20210704181931301](前端面试基础/image-20210704181931301.png)
+
+![image-20210704181011772](前端面试基础/image-20210704181011772.png)
+
+####  协商缓存
+
+> 协商缓存是一种服务器端缓存策略
+>
+> * 服务器判断客户端资源是否和服务端资源一样，若一致则返回304（资源未被修改），否则返回200和最新的资源
+> * 判断资源是否一致的方式是对比资源标识是否发生变化
+
+* 资源标识
+
+  >  在Response Headers中,有两种
+  >
+  > * Last-Modified资源的最后修改时间
+  > * Etag资源的唯一标识(一个字符串,是通过内容计算出来的，只要内容没变，字符串就不变)
+
+![image-20210704183139271](前端面试基础/image-20210704183139271.png)
+
+* Last-Modified的情况
+  * If-Modified-Since的值就是Last-Modified的值
+
+![image-20210704183822668](前端面试基础/image-20210704183822668.png)
+
+* Etag的情况
+  * If-None-Match的值就是Etag的值
+
+![image-20210704184101859](前端面试基础/image-20210704184101859.png)
+
+* Last-Modified和Etag
+  * 会优先使用Etag
+  * Last-Modified只能精确到秒级
+  * 如果资源被重复生成,而内容不变,则Etag更精确，因为Etag是根据内容生成的字符串
+  * Last-Modified和Etag可以同时使用
+
+![image-20210704185111501](前端面试基础/image-20210704185111501.png)
+
+####  缓存流程图
+
+![image-20210704184856161](前端面试基础/image-20210704184856161.png)
+
+####  三种刷新操作
+
+* 正常操作:地址栏输入url , 跳转链接,前进后退等
+* 手动刷新: F5 ,点击刷新按钮;右击菜单刷新
+* 强制刷新: ctrl + F5
+* 正常操作:强制缓存有效,协商缓存有效
+* 手动刷新:强制缓存失效,协商缓存有效
+* 强制刷新:强制缓存失效,协商缓存失效
+
+
+
+#  开发环境
+
+## git
+
+> [Chuckie'Blog-Git](https://chuckiewill.github.io/categories/tools/git/)
+
+###  常用命令
+
+* git add .
+* git checkout xxx        恢复到修改前的状态（撤销修改，对git commit 后的修改做恢复）
+  * git checkout 文件名    恢复这个文件的修改
+  * git checkout .       恢复所有文件的修改
+  * *已经git add 的文件则不能再撤销修改，只要是还没有加入缓存区的都可以修改*
+  * *只能撤销修改的文件，不能撤销新建的文件*
+
+* git commit -m "xxx"
+
+* git push origin master  提交到远程服务器
+  
+* git push orgin 新分支名   在远程新建分支并将本地此分支提交到远程（此操作包括在远程新建分支和提交分支）
+  
+* git pull origin master
+
+* git branch   查看分支
+* git checkout -b xxx  新建分支并切换到该分支上
+  
+*  git checkout xxx   切换分支
+  
+* git merge xxx     合并分支
+
+* git diff  查看文件修改的具体内容
+
+  * git diff  文件名   查看单个文件的修改内容
+  * git diff  不加文件名  查看所有的文件修改内容
+  * *git add 之后再执行git diff 就无效了，只有在未加入缓存区之前，才能查看修改的内容*
+
+* git show + 版本号     查看这个版本修改的具体内容
+
+  * 先通过 git log 找到版本号
+
+* git log   查看提交的版本，
+
+  * 此时是对已经git add 和git commit 后的版本查看，
+  * 若没有git commit 则无效，本质是对git commit 的版本进行查看
+
+* git fetch  拉下所有的分支
+
+* git stash   将修改的部分移除并暂存在其他地方（误操作时使用）
+
+  * git stash pop  推出暂存的部分
+
+* git status  查看当前状态（可以查看修改了哪些文件，新增加了哪些文件，此时还没提交版本）
+
+  * 文件修改，或文件添加后已经保持，但还没有git add ,此时文件标红
+
+  ![image-20210705182836826](前端面试基础/image-20210705182836826.png)
+
+  * git add 后，此时文件标绿
+
+  ![image-20210705183853820](前端面试基础/image-20210705183853820.png)
+
+  * git commit 后，此时就看不到修改的文件和添加的文件了，只会显示已提交x个版本
+
+
+
+###  多人开发
+
+1. leader创建项目，此时项目为master分支
+
+2. 开发者1 需要开发登陆功能
+
+   * 拉取master分支的代码到本地：`git clone`
+
+   * 新建分支并切换到该分支进行开发：`git checkout -b login`  //login为新分支名
+   * 修改或添加文件，完成开发
+   * 将开发完成的代码提交到远程服务器：`git push origin login`//在远程新建login分支并将本地该分支提交到远程
+
+3. 开发者2 需要开发注册功能
+
+   * 拉取master分支的代码到本地：`git clone`
+
+   * 新建分支并切换到该分支进行开发：`git checkout -b register`  //login为新分支名
+   * 修改或添加文件，完成开发
+   * 将开发完成的代码提交到远程服务器：`git push origin register`//在远程新建register分支并将本地该分支提交到远程
+
+4. leader合并开发者1和2的代码
+
+   * 拉去所有代码所有分支到本地： `get fetch`
+
+   * 切到每个分支，拉取最新代码：`get pull orgin 分支名`    //此操作是确保每个分支是最新内容
+
+   * 合并分支（终端切在master分支上）: `git merge login` //将login分支内容合并到master分支上
+
+   * 将合并后的代码推到远程服务器： `git push`
+
+   * 按以上步骤合并下一个分支，直到产生冲突
+
+     ![image-20210705200537368](前端面试基础/image-20210705200537368.png)
+
+     * 找到冲突文件的位置，选择保留方式，并修改冲突位置
+
+     ![image-20210705200700948](前端面试基础/image-20210705200700948.png) 
+     * 因为处理冲突后修改了文件内容，所以需要`git add  git commit`
+     * 提交到远程服务器： `git push`
+
+###  误操作
+
+> 拉取master分支后，本来是要新建分支再开发，但是忘记新建分支就直接在master分支上开发了
+>
+> * 以下操作是在没有加入暂存区之前执行才有效
+> * 执行完以下操作后，master恢复到没有开发前的状态
+
+1. 将已经在master上开发的部分移除并暂存到其他地方：`git stash`
+2. 新建分支并切到相应分支上：`git checkout -b 新分支`
+3. 将暂存的部分推出到新的分支上：`git stash pop`
+4. 将修改的部分暂存到暂存区并提交本版再推到远程：`gti add、 git commit、 git push origin 新分支`
+
+
+
+
+
+##  webpack babel
+
+> [Chuckie'Blog-webpack](https://chuckiewill.github.io/categories/third-repositories/webpack/)
+>
+> ES6模块化，浏览器暂不支持
+> ES6语法，浏览器并不完全支持
+> 压缩代码，整合代码，以让网页加载更快
+
+###  webpack打包流程
+
+* 安装node.js
+
+* 项目根目录下初始化：`npm init -y`
+  
+  * 初始化后根文件夹下会生成文件`package.json`
+  
+* 安装webpack: `npm install --save-dev webpack webpack-cli`
+
+  * 使用 webpack 4+ 版本，还需要安装 CLI
+
+* 根目录下新建资源文件夹（src）即入口文件(index.js)
+
+  * `src/index.js`
+
+* 根目录下新建配置文件`webpack.config.js`,并配置入口和出口
+```js
+  //webpack.config.js
+  const path = require('path')
+  
+  module.exports = {
+    //development是开发模式，production是生产模式（上线模式）
+    mode: 'development',//production
+    //入口：可以是字符串、数组、对象，这里只有一个入口，写字符串即可
+    entry:'./src/main.js',
+    //出口: path:打包文件保存路径  filename:打包的文件名
+    output:{
+        path: path.resolve(__dirname,'dist'),
+        filename: 'bundle.js'
+    }
+  }
+```
+
+* package.json中定义打包启动
+
+```json
+  //package.json
+    "scripts": {
+      "build": "webpack"
+    },
+```
+
+* 打包
+
+```js
+  npm run build
+  //打包后的文件存储在./dist/bundle.js中
+```
+
+###  打包index.html
+
+* 目前的index.html文件是存放在项目的根目录下的。
+  * 在真实发布项目时，发布的是dist文件夹中的内容，但是dist文件夹中如果没有index.html文件，那么打包的js等文件也就不能起效果
+  * 所以，需要将index.html文件打包到dist文件夹中，这个时候就可以使用`HtmlWebpackPlugin`插件
+
+* `HtmlWebpackPlugin`插件的功能：
+
+  * 自动生成一个index.html文件(可以指定模板来生成)
+  * 将打包的js文件，自动通过script标签插入到body中
+
+* 安装`HtmlWebpackPlugin`插件
+
+```js
+  npm install html-webpack-plugin --save-dev
+```
+
+* 使用插件，修改webpack.config.js文件中plugins部分
+
+  * 这里的template表示根据什么模板来生成index.html
+  * fielname是在dist文件夹中生成的文件名
+
+```js
+  //webpack.config.js
+  const HtmlWebpackPlugin = require('html-webpack-plugin')
+  
+  module.exports = {
+    plugins: [
+      new HtmlWebpackPlugin({
+        template: './src/index.html',
+        filename: 'index.html'
+      })
+    ]
+  }
+```
+
+
+
+###  搭建本地服务
+
+* webpack提供了一个可选的本地开发服务器，这个本地服务器基于node.js搭建，内部使用express框架，可以实现浏览器自动刷新显示我们修改后的结果。
+
+* 安装
+
+```js
+npm install --save-dev webpack-dev-server@版本号
+```
+
+* webpack.config.js中配置` devServer`
+
+  * contentBase：为哪一个文件夹提供本地服务，默认是根文件夹，一般指定./dist
+  * port：端口号
+  * inline：页面实时刷新
+  * historyApiFallback：在SPA页面中，依赖HTML5的history模式
+
+```js
+module.exports = {
+    devServer: {
+      contentBase: './dist',
+      inline: true,
+      port:3000
+    }
+}
+```
+
+* package.js中配置`scripts`
+
+  * 该配置是设置启动本地服务器的命令
+
+  * `--open`: 表示直接打开浏览器
+
+```js
+ "scripts": {
+    "dev": "webpack-dev-server --open"
+  },
+```
+
+* 启动本地服务器
+
+```js
+终端：npm run dev
+```
+
+###  webpack配置分离
+
+> [webpack配置分离详细教程:Chuckie'Blog-webpack](https://chuckiewill.github.io/categories/third-repositories/webpack/)
+>
+> 开发模式转生成模式的简易操作流程
+
+1. 新建webpack.prod.js,将webpack.config.js的内容复制到该文件并做如下修改
+
+* 去掉devServer的配置（因为上线的产品不需要本地服务）
+* output和mode做如下修改
+
+```js
+//webpack.config.js
+module.exports = {
+  mode: 'production',//改为生产模式
+  output:{
+      path: path.resolve(__dirname,'dist'),
+      filename: 'bundle.[contenthash].js'//增加哈希值，以提高性能
+  },
+}
+```
+
+2. package.json修改
+
+* 重定向打包的配置文件
+
+```json
+ "scripts": {
+    "build": "webpack  --config webpack.prod.js",
+  },
+```
+
+
+
+
+
+###  ES6转ES5（待完成）
+
+
+
+###  模块化 导入导出
+
+#### ES6 export import
+
+> 使用前提：  script  type类型为module
+
+```
+<script src='../text.js' type='module'></script>
+```
+
+* 导出：export: 逐一导出
+
+
+```js
+  export let myName = "Tom";
+  export let myAge = 20;
+  export let myfn = function(){
+              return "My name is" + myName + "! I'm '" + myAge + "years old."
+          }
+  export let myClass =  class myClass {
+              static a = "yeah!";
+          }
+```
+
+  * 导出：export: 统一导出，等同于逐一导出
+
+```js
+  let myName = "Tom";
+  let myAge = 20;
+  let myfn = function(){
+      return "My name is" + myName + "! I'm '" + myAge + "years old."
+  }
+  let myClass =  class myClass {
+      static a = "yeah!";
+  }
+  export { myName, myAge, myfn, myClass }
+```
+
+  * 导出：export: export default 
+    * 在一个文件或模块中，export、import 可以有多个，export default 仅有一个。
+    * export default 中的 default 是对应的导出接口变量。
+    * 通过 export 方式导出，在导入时要加{ }，export default 则不需要。
+    * export default 向外暴露的成员，可以使用任意变量来接收。
+
+```js
+  var a = "My name is Tom!";
+  export default a; // 仅有一个
+   
+  import b from "./xxx.js"; // 不需要加{}， 使用任意变量接收
+```
+
+```js
+  //导出
+  let myName = "Tom";
+  let myAge = 20;
+  let myfn = function(){
+      return "My name is" + myName + "! I'm '" + myAge + "years old."
+  }
+  let myClass =  class myClass {
+      static a = "yeah!";
+  }
+  export default{ myName, myAge, myfn, myClass }
+  
+  //导入
+  import xxx from './xxx.js'
+  //使用
+  xxx.myName
+  xxx.myAge
+  xxx.myfn()
+  xxx.myClass
+```
+
+  
+
+* 导入：import: 导入时  路径一定是相对路径
+
+
+```
+1 逐个导入
+import { myName, myAge, myfn, myClass } from "./test.js";
+console.log(myfn());// My name is Tom! I'm 20 years old.
+console.log(myAge);// 20
+console.log(myName);// Tom
+console.log(myClass.a );// yeah!
+
+2 统一导入
+import * as aaa from "./test.js"
+console.log(aaa.myAge);// 20
+```
+
+* 导入：import: as用法
+
+```
+/*-----export [test.js]-----*/
+let myName = "Tom";
+export { myName as exportName }
+ 
+/*-----import [xxx.js]-----*/
+import { exportName } from "./test.js";
+console.log(exportName);// Tom
+使用 as 重新定义导出的接口名称，隐藏模块内部的变量
+/*-----export [test1.js]-----*/
+let myName = "Tom";
+export { myName }
+/*-----export [test2.js]-----*/
+let myName = "Jerry";
+export { myName }
+/*-----import [xxx.js]-----*/
+import { myName as name1 } from "./test1.js";
+import { myName as name2 } from "./test2.js";
+console.log(name1);// Tom
+console.log(name2);// Jerry
+```
+
+#### 对比commonJS模块
+
+* 使用前提：需要node.js环境解析  所以 使用前要先安装node.js
+
+* 导出
+
+```
+module.exports = {变量名，函数名，对象名}
+```
+
+* 导入
+
+```
+let {变量名，函数名，对象名}  = require('../aaa.js')
+```
+
+* 别名
+
+
+```js
+//导出  
+module.exports = {
+    别名:原名
+  }
+  
+  module.exports = {
+    db:sequelize
+  }
+```
+
+```js
+//导入 
+const {原名 : 别名} = require('../../core/db')
+const {sequelize : db} = require('../../core/db')
+```
+
+  
+
+##  linux常用命令
+
+* 本地登陆linux账户：`ssh  主机名@地址`
+
+* 查看文件
+
+  * 平铺：`ls`
+  * 列表形式：`ll`
+  * 查看所有文件（包括隐藏文件）：`ls -a`
+
+* 清屏：`clear`
+
+* 创建文件夹：`mkdir ...`
+
+* 删除文件夹：`rm -rf ...`
+
+  * `-r`:递归删除
+
+  * `-f`：强制删除
+
+* 删除文件： `rm 文件名`
+
+* 切换文件夹：`cd 文件夹名/`   后退：`cd ../`
+
+* 修改文件名： `mv 原文件名  新文件名`
+
+* 移动文件：`mv 文件名   新路径（相对路径）/文件名`
+
+* 拷贝：`cp 被拷贝文件名  拷贝文件名`
+
+* 新建文件
+
+  * `touch 文件名`  //只新建
+  * `vi 文件名 `     或`vim 文件名`   //新建并打开
+    * 键盘点击`i`进入编辑模式，可以编辑文件
+    * 点即`ESC`按键，在输入`:`，在输入`w`（保存），再回车，再输入`q`,再回车即可保存文件并推出
+    * 点即`ESC`按键，在输入`:`，再输入`q`,强制推出，之前修改的内容并没有保存
+
+* 查看文件内容
+
+  * `vi 文件名   或   vim文件名`： 可打开还可修改
+  * `cat 文件名`： 只能查看文件
+  * `head 文件名`： 查看文件头部内容
+  * `tail 文件名`： 查看文件尾部
+
+* 在文件中查找关键字： `grep "关键字"  文件名`
+
+
+
+##  抓包（待完成）
+
+>  移动端h5页，查看网络请求，需要用工具抓包
+> windows一般用fiddler
+> Mac oS一般用charles
+
+* 抓包流程
+  * 手机和电脑连同一个局域网
+  * 将手机代理到电脑上
+  * 手机浏览网页，即可抓包
+
+
+
+
+
+#  运行环境
+
+##  页面加载过程
+
+* 从输入url到渲染出页面的整个过程
+* window.onload和DOMContentLoaded的区别
+  * 在页面渲染时（根据render tree渲染页面时），遇到图片（img标签）或视频加载时，不会阻断渲染，渲染会继续，只是图片的位置会预留处理，当图片、视频加载完成后会将图片、视频放到预留的位置，而图片加载时间可能长于渲染时间，所以会出现渲染已经完成，但时图片还未加载完成的情况 
+
+![image-20210706221138671](前端面试基础/image-20210706221138671.png)
+
+
+
+* 加载资源的形式
+  * html代码
+  * 媒体文件：图片、视频等
+  * javascript 、css代码
+* 加载资源的过程
+  * DNS解析:域名->IP地址
+  * 浏览器根据IP地址向服务器发起http请求（建立TCP链接，再发送请求）
+  * 服务器处理http请求，并返回给浏览器
+* 渲染页面的过程
+  * 根据HTML代码生成DOM Tree
+  * 根据CSS代码生成CSSOM
+  * 将DOM Tree和CSSOM整合行程Render Tree
+  * 根据Render Tree渲染页面
+  * 遇到`<script>`则暂停渲染，优先加载并执行js代码，完成再继续
+  * 直至把Render Tree渲染完成
+
+
+
+
+
+## 性能优化
+
+**性能优化原则**
+
+* 多使用内存、缓存或其他方法
+* 减少CPU计算量，减少网络加载耗时
+* (适用于所有编程的性能优化——空间换时间)
+
+**让加载更快**
+
+* 减少资源体积︰压缩代码
+  * 例如：生产模式下webpack打包生成的bundle.js文件就是压缩文件
+* 减少访问次数∶合并代码，SSR服务器端渲染，缓存
+  * SSR  *此处不懂，待完成？？？？？？？*
+    * 服务器端渲染:将网页和数据一起加载，一起渲染
+    * 非SSR（前后端分离):先加载网页，再加载数据，再渲染数据
+    * 早先的JSP ASP PHP，现在的vue React SSR
+  * 合并代码案例：生产模式下webpack打包生成的bundle.js文件就是多个js文件合并后的文件
+  * 缓存案例：*这里http缓存机制需要设置`Etag或Last-Modified`吗？？？？？*
+    * webpack打包的静态资源加hash后缀，根据文件内容计算hash
+    * 文件内容不变，则hash 不变，则url不变
+    * url和文件不变，则会自动触发http缓存机制，返回304
+
+![image-20210707212401996](前端面试基础/image-20210707212401996.png)
+
+* 使用更快的网络:CDN     *此处不懂，待完成？？？？？？？*
+
+**让渲染更快**
+
+* CSS放在head ,JS放在body最下面
+* 尽早开始执行JS，用DOMContentLoaded触发
+* 懒加载（图片懒加载，上滑加载更多)
+
+```html
+//src="preview. png" 是占位图片，data-realsrc="abc.png"是图片的真实地址
+<img id="img1" src="preview. png" data-realsrc="abc.png"/>
+<script type="text/javascript">
+    //1 拿到图片节点
+    var img1 = document.getElementById( ' img1 ')
+    //2 监听图片是否正在页面显示
+    .....
+    //3 若图片正在页面显示则将src更换为真实的图片地址并加载图片
+    img1.src = img1.getAttribute( 'data-realsrc ' )
+</script>
+
+```
+
+
+
+* 对DOM查询进行缓存
+
+* 频繁DOM操作，合并到一起插入DOM结构
+
+* 节流throttle
+
+  > *频繁操作频繁触发事件--->无论操作多频繁都设定每隔n毫秒触发一次事件*
+  >
+  > 案例
+  >
+  > * 拖拽一个元素时，要随时拿到该元素被拖拽的位置
+  > * 直接用drag事件，则会频发触发，很容易导致卡顿
+  > * 节流:无论拖拽速度多快，都会每隔100ms触发一次
+
+
+```html
+//throttle.html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>throttle 演示</title>
+        <style>
+            #div1 {
+                border: 1px solid #ccc;
+                width: 200px;
+                height: 100px;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="div1" draggable="true">可拖拽<div>
+
+        <script src="./throttle1.js"></script>
+    </body>
+</html>
+```
+
+```js
+//throttle1.js
+const div1 = document.getElementById('div1')
+
+// //设置定时器
+// let timer = null
+
+// div1.addEventListener('drag', function(e){
+//   //若定时器还未执行则跳过下面的代码，直接返回
+//   if(timer){
+//     return
+//   }
+//   timer = setTimeout(()=>{
+//     console.log(e.offsetX,e.offsetY)
+//     timer = null
+//   },500)
+// })
+
+//抽离出节流函数
+//fn是需要节流的函数，delay是节流的时间间隔
+function throttle(fn, delay = 100){
+  let timer = null
+  return function(){
+    if(timer){
+      return
+    }
+    timer = setTimeout(()=>{
+      //这里的this指向的是throttle返回的这个函数
+      fn.apply(this, arguments)
+      timer=null
+    }, delay)
+  }
+}
+
+//这里的参数e会传给throttle返回的函数
+div1.addEventListener('drag', throttle(function(e){
+  console.log(e.offsetX,e.offsetY)
+}, 200))
+```
+
+
+
+* **防抖debounce**
+
+  > *频繁操作频繁触发事件--->在频繁操作结束并停顿n毫秒后触发事件*
+  >
+  > 案例
+  >
+  > * 监听一个输入框时，文字变化后触发change事件
+  > * 直接用keyup事件，则会频发触发change事件
+  > * 防抖∶用户输入结束或暂停时，才会触发change事件
+
+```html
+//debounce.html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>debounce 演示</title>
+    </head>
+    <body>
+        <input type="text" id="input1">
+
+        <script src="./debounce1.js"></script>
+    </body>
+</html>
+```
+
+```js
+//debounce1.js
+const input = document.getElementById('input1')
+
+// //建立定时器
+// let timer = null
+
+// input.addEventListener('keyup',function(){
+//   if(timer){
+//     //clearTimeout是window对象，用于阻止 setTimeout() 方法执行
+//     clearTimeout(timer)
+//   }
+//   timer = setTimeout(() => {
+//     //模拟触发change事件
+//     console.log(input.value)
+//     //清空定时器
+//     timer = null
+//   }, 500)
+// })
+
+
+//抽离出防抖函数
+//fn：需要防抖的函数，delay防抖的时间间隔
+function debounce(fn, delay = 500){
+  //timer在闭包中
+  let timer = null 
+  return function(){
+    if(timer){
+      clearTimeout(timer)
+    }
+    timer = setTimeout(()=>{
+      //执行需要防抖的函数,防抖函数有参数也可执行
+      fn()
+      //fn.apply(this,arguments) 使用此方式时传入的函数不能时箭头函数，否则this就会有误
+      timer = null
+    },delay)
+  }
+}
+
+input.addEventListener('keyup', debounce(function(num = 200){
+  console.log(input.value)
+  console.log(num)
+}, 600))
+```
+
+##  安全
+
+* XSS跨站请求攻击
+
+  > [npm-xss包](https://www.npmjs.com/pacage/xss)
+
+  * 案例
+    * 一个博客网站，我发表一篇博客，其中嵌入`<script>`脚本
+    * 脚本内容:获取cookie ，发送到我的服务器（服务器配合跨域)
+    * 发布这篇博客，有人查看它，我轻松收割访问者的cookie
+
+  * 预防xss攻击
+
+    * 替换特殊字符，如`<`变为`&lt;`,`>`变为`&gt;`
+    *  `<script>`变为`&lt;script&gt;`，直接显示，而不会作为脚本执行
+    * 前端要替换，后端也要替换，都做总不会有错
+
+* XSRF 跨站请求伪造
+
+  * 案例
+    * 你正在购物，看中了某个商品，商品id是100
+    * 付费接口是xxx.com/pay?id=100，但没有任何验证
+    * 我是攻击者，我看中了一个商品，id是200
+    * 我向你发送一封电子邮件，邮件标题很吸引人
+    * 但邮件正文隐藏着<img src=xXx.com/pay?id=200 />  **此时你的浏览器是存储了购买商品的网站的个人信息（例如cookie）即验证信息的**
+    * 你一查看邮件，就帮我购买了id是200的商品
+  * 预防xsrf攻击
+    * 使用post接口（post接口实现跨域很复杂，需要服务端验证，所以直接用img标签是攻击不了的）
+    * 增加验证，例如密码、短信验证码、指纹等
