--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -10,16 +10,19 @@ categories:
 
 ---
 
+>  L247 - 快速搞定前端技术一面 匹配大厂面试要求
 
+#  一、HTML
 
-# L247 - 快速搞定前端技术一面 匹配大厂面试要求
+> [Chuckie's Blog-HTML](https://chuckiewill.github.io/categories/html/)
 
-#  HTML
+* 如何理解HTML语义化?
 
-#### 如何理解HTML语义化?
-####  默认情况下，哪些HTML标签是块级元素、哪些是内联元素?
+* 默认情况下，哪些HTML标签是块级元素、哪些是内联元素?
 
-#  CSS
+#  二、CSS
+
+> [Chuckie's Blog-CSS](https://chuckiewill.github.io/categories/css/)
 
 ###  布局
 
